# Spacewar_cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
VS/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Spacewar.sln  Spacewar.vcxproj  Spacewar.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
VS/engine/: Engine.vcxproj  Engine.vcxproj.filters
VS/game/: Game.vcxproj  Game.vcxproj.filters
engine/: CMakeLists.txt  engine.cpp  engine.h
engine/controller/: CMakeLists.txt  input_controller.cpp  input_controller.h
engine/ecs/: CMakeLists.txt  component.h  component_container.h  component_id.h  component_sparse_set.h  component_type.h  entity.h  entity_container.h  entity_manager.h  entity_set.h  entity_set_iterator.h  entity_set_type.h  sparse_set.h  system.h
engine/math/: angle_utils.h  point.h  utils.h  vec_2.h
engine/model/: CMakeLists.txt  game_object.cpp  game_object.h  point.h  world.h
engine/view/: CMakeLists.txt  i_visualiser.h  i_visualiser_context.h  main_view.cpp  main_view.h  visualiser_context.cpp  visualiser_context.h
game/: CMakeLists.txt  collider_layer.h  game.cpp  game.h  game_config.h  game_controller.cpp  game_controller.h
game/components/: bullet.h  collider.h  player.h  rigid_body.h  star.h
game/model/: player_state.cpp  player_state.h
game/systems/: bullet_controller_system.cpp  bullet_controller_system.h  game_state_system.cpp  game_state_system.h  player_controller_system.cpp  player_controller_system.h  world_boundary_system.cpp  world_boundary_system.h
tests/: CMakeLists.txt
(+38 files in other folders)
